objects/DQ_Special_Offers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store Special Offers terms sub approvers</description>
    <fields>
        <fullName>Additional_Email_Addresses__c</fullName>
        <label>Additional Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Up_Contact_Email__c</fullName>
        <label>Back Up Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Function__c</fullName>
        <label>Finance Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DQ Special Offers</label>
    <listViews>
        <fullName>All_Columns</fullName>
        <columns>NAME</columns>
        <columns>Finance_Function__c</columns>
        <columns>Region__c</columns>
        <columns>Primary_Contact_Email__c</columns>
        <columns>Back_Up_Contact_Email__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
</CustomObject>